fix(lista): adjusting scss on List's Component

--- a/src/components/Lista/lista.module.scss
+++ b/src/components/Lista/lista.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   gap: 2rem;
 
-  &__employess {
+  &__employees {
     width: 80%;
     display: flex;
     flex-wrap: wrap;
